--- a/pandas-exercises.ipynb
+++ b/pandas-exercises.ipynb
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame you created to a .csv file\n",
-    "car_sales.to_csv('car-sales-dataframe.csv')\n"
+    "car_sales.to_csv('data/car-sales-dataframe.csv')\n"
    ]
   },
   {
